keep stale partition assignment until a new one is available, refactor